stylesheet: Fix infobar spacing
Use 6px everywhere instead of 8px, 12px and 0px.

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/382

--- a/src/stylesheet/widgets/_toolbars.scss
+++ b/src/stylesheet/widgets/_toolbars.scss
@@ -204,9 +204,14 @@ actionbar > revealer > box {
 
 infobar {
   > revealer > box {
-    padding: 8px 8px 9px 8px;
-    border-spacing: 12px;
-    box-shadow: inset 0 -1px if($contrast == 'high', $border_color, $shade_color),
+    padding: 6px;
+    padding-bottom: 7px;
+    border-spacing: 6px;
+    box-shadow: inset 0 -1px if($contrast == 'high', $border_color, $shade_color);
+
+    > box {
+      border-spacing: 6px;
+    }
   }
 
   &.action:hover > revealer > box {
